<resources>
    <string name="app_name">Newsify</string>

    <string name="home">Home</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="business">Business</string>
    <string name="main_heading">Main Heading</string>
    <string name="main_content">Main Content</string>
    <string name="author_name">Author Name</string>
    <string name="published_at">Published At:- </string>
</resources>