<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomePage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@+id/toolbar"
        app:tabIndicatorColor="@color/background"
        app:tabIndicatorHeight="3.5dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/background"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/itemHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/itemSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/itemHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/itemScience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/itemBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/itemEntertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/itemTechnology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayout">


    </androidx.viewpager.widget.ViewPager>

</RelativeLayout>