<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="295dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:elevation="20dp"
        android:padding="10dp"
        android:transitionName="card_view"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainHeading"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="5dp"
                android:text="@string/main_heading"
                android:textColor="@color/background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="6"
                    android:padding="5dp"
                    android:text="@string/main_content"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo" />

            </LinearLayout>

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="5dp"
                android:text="@string/author_name"
                android:textColor="@color/purple_500"
                android:textSize="13sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="5dp"
                android:text="@string/published_at"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>